WordToNumberConverter
Signed-off-by: sunilsoni <sunilsoni@live.in>